...
      </View>
    );
  }

  return (
    <FlatList
      accessibilityLabel="셀러 랭킹 목록"
      accessibilityRole="list"
      data={state.data}
      ItemSeparatorComponent={RowSeparator}
      keyExtractor={(item) => item.id}
      ListFooterComponent={<View style={{ height: bottomPadding }} />}
      onRefresh={onRefresh}
...
